# tutorial-bigquery-tags

./: .gitignore  pyproject.toml
data/: financial_info.csv  load_data.sh  personal_info.csv
function/: pyproject.toml
function/bq_taxonomy/: bigquery.py  dataform.py  main.py  process.py  requirements.txt
terraform/: .terraform.lock.hcl  bq_infra.tf  data_policies.tf  gcf.tf  iam.tf  providers.tf  services.tf  variables.tf
